--- a/templates/default/config.js.erb
+++ b/templates/default/config.js.erb
@@ -39,7 +39,7 @@ function (Settings) {
      * If your graphite server has another timezone than you & users browsers specify the offset here
      * Example: "-0500" (for UTC - 5 hours)
      */
-    timezoneOffset: null,
+    timezoneOffset: <%= node['grafana']['timezone_offset'] %>,
 
     grafana_index: "grafana-dash",
 
