--- a/templates/default/config.js.erb
+++ b/templates/default/config.js.erb
@@ -5,6 +5,7 @@
  */
 define(['settings'],
 function (Settings) {
+  // "use strict";
 
   return new Settings({
 
@@ -24,23 +25,46 @@ function (Settings) {
     graphiteUrl: window.location.protocol+"//"+window.location.hostname+":"+window.location.port+"/_graphite",
 
     /**
-     * Multiple graphite servers? Comment out graphiteUrl and replace with
-     *
-     *  datasources: {
-     *    data_center_us: { type: 'graphite',  url: 'http://<graphite_url>',  default: true },
-     *    data_center_eu: { type: 'graphite',  url: 'http://<graphite_url>' }
-     *  }
-     */
+     * Multiple graphite servers? Comment out graphiteUrl and replace with something like this:
+
+      datasources: {
+        data_center_us: {
+          type: 'graphite',
+          url: 'http://<graphite_url>',
+          default: true
+        },
+        data_center_eu: {
+          type: 'graphite',
+          url: 'http://<graphite_url>',
+          render_method: 'GET' // optional, use this to change render calls from POST to GET
+        }
+      },
+    */
 
     default_route: '/dashboard/file/default.json',
 
     /**
-     * If your graphite server has another timezone than you & users browsers specify the offset here
-     * Example: "-0500" (for UTC - 5 hours)
+     * If you experiance problems with zoom, it is probably caused by timezone diff between
+     * your browser and the graphite-web application. timezoneOffset setting can be used to have Grafana
+     * translate absolute time ranges to the graphite-web timezone.
+     * Example:
+     *   If TIME_ZONE in graphite-web config file local_settings.py is set to America/New_York, then set
+     *   timezoneOffset to "-0500" (for UTC - 5 hours)
+     * Example:
+     *   If TIME_ZONE is set to UTC, set this to "0000"
      */
     timezoneOffset: "<%= node['grafana']['timezone_offset'] %>",
 
+    /**
+     * Elasticsearch index for storing dashboards
+     *
+     */
     grafana_index: "grafana-dash",
+
+    /**
+     * set to false to disable unsaved changes warning
+     */
+    unsaved_changes_warning: true,
 
     panel_names: [
       'text',
