Update grafana to 1.6.0

--- a/templates/default/config.js.erb
+++ b/templates/default/config.js.erb
@@ -1,74 +1,58 @@
-/** @scratch /configuration/config.js/1
- * == Configuration
- * config.js is where you will find the core Grafana configuration. This file contains parameter that
- * must be set before kibana is run for the first time.
- */
+///// @scratch /configuration/config.js/1
+ // == Configuration
+ // config.js is where you will find the core Grafana configuration. This file contains parameter that
+ // must be set before Grafana is run for the first time.
+ ///
 define(['settings'],
 function (Settings) {
-  // "use strict";
+
 
   return new Settings({
 
-    /**
-     * elasticsearch url:
-     * For Basic authentication use: http://username:password@domain.com:9200
-     */
-    elasticsearch: window.location.protocol+"//"+window.location.hostname+":"+window.location.port,
+    // datasources, you can add multiple
+    datasources: {
+      graphite: {
+        type: 'graphite',
+        url: "<%= node['grafana']['graphite_scheme'] %><%= node['grafana']['graphite_server'] %>:<%= node['grafana']['graphite_port'] %>",
+        default: true
+      }
+    },
 
-    /**
-     * graphite-web url:
-     * For Basic authentication use: http://username:password@domain.com
-     * Basic authentication requires special HTTP headers to be configured
-     * in nginx or apache for cross origin domain sharing to work (CORS).
-     * Check install documentation on github
-     */
-    graphiteUrl: window.location.protocol+"//"+window.location.hostname+":"+window.location.port+"/_graphite",
+    // elasticsearch url
+    // used for storing and loading dashboards, optional
+    // For Basic authentication use: http://username:password@domain.com:9200
+    elasticsearch: "<%= node['grafana']['es_scheme'] %><%= node['grafana']['es_server'] %>:<%= node['grafana']['es_port'] %>",
 
-    /**
-     * Multiple graphite servers? Comment out graphiteUrl and replace with something like this:
-
-      datasources: {
-        data_center_us: {
-          type: 'graphite',
-          url: 'http://<graphite_url>',
-          default: true
-        },
-        data_center_eu: {
-          type: 'graphite',
-          url: 'http://<graphite_url>',
-          render_method: 'GET' // optional, use this to change render calls from POST to GET
-        }
-      },
-    */
-
+    // default start dashboard
     default_route: '/dashboard/file/default.json',
 
-    /**
-     * If you experiance problems with zoom, it is probably caused by timezone diff between
-     * your browser and the graphite-web application. timezoneOffset setting can be used to have Grafana
-     * translate absolute time ranges to the graphite-web timezone.
-     * Example:
-     *   If TIME_ZONE in graphite-web config file local_settings.py is set to America/New_York, then set
-     *   timezoneOffset to "-0500" (for UTC - 5 hours)
-     * Example:
-     *   If TIME_ZONE is set to UTC, set this to "0000"
-     */
-    timezoneOffset: "<%= node['grafana']['timezone_offset'] %>",
+    // timezoneOFfset:
+    // If you experiance problems with zoom, it is probably caused by timezone diff between
+    // your browser and the graphite-web application. timezoneOffset setting can be used to have Grafana
+    // translate absolute time ranges to the graphite-web timezone.
+    // Example:
+    //   If TIME_ZONE in graphite-web config file local_settings.py is set to America/New_York, then set
+    //   timezoneOffset to "-0500" (for UTC - 5 hours)
+    // Example:
+    //   If TIME_ZONE is set to UTC, set this to "0000"
+    //
+    timezoneOffset: <%= node['grafana']['timezone_offset'] %>,
 
-    /**
-     * Elasticsearch index for storing dashboards
-     *
-     */
-    grafana_index: "grafana-dash",
+    // Elasticsearch index for storing dashboards
+    grafana_index: "<%= node['grafana']['grafana_index'] %>",
 
-    /**
-     * set to false to disable unsaved changes warning
-     */
-    unsaved_changes_warning: true,
+    // set to false to disable unsaved changes warning
+    unsaved_changes_warning: <%= node['grafana']['unsaved_changes_warning'] %>,
 
-    panel_names: [
-      'text',
-      'graphite'
-    ]
+    // set the default timespan for the playlist feature
+    // Example: "1m", "1h"
+    playlist_timespan: "<%= node['grafana']['playlist_timespan'] %>",
+
+
+    // Add your own custom pannels
+    plugins: {
+      panels: []
+    }
+
   });
 });
