Block access to config.js from the browser.
config.js could contain username and passwords for graphite and may
contain more sensitive information in the future.

--- a/templates/default/grafana-nginx.conf.erb
+++ b/templates/default/grafana-nginx.conf.erb
@@ -9,6 +9,10 @@ server {
     index  index.html  index.htm;
   }
 
+  location ~ ^/config.js {
+    deny all;
+  }
+
   location ~ ^/_graphite {
     rewrite ^/_graphite/(.*)$ /$1 break;
     proxy_pass <%= @graphite_scheme %><%= @graphite_server %>:<%= @graphite_port %>;
