--- a/templates/default/config.js.erb
+++ b/templates/default/config.js.erb
@@ -10,7 +10,7 @@ function (Settings) {
   return new Settings({
 
     // datasources, you can add multiple
-    datasources: <%= pprint(@datasources,3) %>,
+    datasources: <%= ::JavascriptPP.pprint(@datasources,3) %>,
 
     // default start dashboard
     default_route: '/dashboard/file/default.json',
