Configure default_route with an attribute

--- a/templates/default/config.js.erb
+++ b/templates/default/config.js.erb
@@ -13,7 +13,7 @@ function (Settings) {
     datasources: <%= ::JavascriptPP.pprint(@datasources,3) %>,
 
     // default start dashboard
-    default_route: '/dashboard/file/default.json',
+    default_route: '<%= node['grafana']['default_route'] %>',
 
     // timezoneOFfset:
     // If you experiance problems with zoom, it is probably caused by timezone diff between
