Adding data_dir to templates.

--- a/templates/default/grafana.ini.erb
+++ b/templates/default/grafana.ini.erb
@@ -13,7 +13,7 @@
 [paths]
 # Path to where grafana can store temp files, sessions, and the sqlite3 db (if that is useD)
 #
-;data = /var/lib/grafana
+data = <%= @data_dir %>
 #
 # Directory where grafana can store logs
 #
