HTTP listen port configurable via attribute.

--- a/templates/default/grafana.ini.erb
+++ b/templates/default/grafana.ini.erb
@@ -28,7 +28,7 @@ logs = <%= @log_dir %>
 ;http_addr =
 
 # The http port  to use
-;http_port = 3000
+http_port = <%= @http_port %>
 
 # The public facing domain name used to access grafana from a browser
 ;domain = localhost
