--- a/templates/default/grafana-env.erb
+++ b/templates/default/grafana-env.erb
@@ -8,6 +8,6 @@ GRAFANA_HOME=<%= @grafana_home %>
 LOG_DIR=<%= @log_dir %>
 DATA_DIR=<%= @data_dir %>
 MAX_OPEN_FILES=10000
-CONF_DIR=/etc/grafana
-CONF_FILE=/etc/grafana/grafana.ini
+CONF_DIR=<%= @conf_dir %>
+CONF_FILE=<%= @conf_dir %>/grafana.ini
 RESTART_ON_UPGRADE=false
