Enable multiple ldap trees and servers for authentication (#7)
* Enable multiple ldap trees and servers for authentication

 _Added an attribute node['grafana']['ldap_multi_tree_auth']; when
  it is set to true, it is possible to configure to configure
  several ldap servers by using default['grafana']['ldap'][0],
  default['grafana']['ldap'][1]['[servers]']['host'], etc. instead
  of default['grafana']['ldap']['[servers]'] with the same syntax.
 _Added a function format_multi_config in GrafanaCookbook::IniHelper
  to handle configurations 'multiple' like the one above.

* loop over keys instead of a counter

* loop over keys instead of a counter

* use a seperate tree for multi ldap server config

--- a/templates/default/ldap.toml.erb
+++ b/templates/default/ldap.toml.erb
@@ -8,4 +8,8 @@
 # Set to true to log user information returned from LDAP
 verbose_logging = <%= @verbose_logging %>
 
+<% if @multi_config != true %>
 <%= GrafanaCookbook::IniHelper.format_config @config %>
+<% else %>
+<%= GrafanaCookbook::IniHelper.format_multi_config @config['multiconfig'] %>
+<% end %>
