support pid dir

--- a/templates/default/grafana-env.erb
+++ b/templates/default/grafana-env.erb
@@ -11,4 +11,5 @@ PLUGINS_DIR=<%= @plugins_dir %>
 MAX_OPEN_FILES=10000
 CONF_DIR=<%= @conf_dir %>
 CONF_FILE=<%= @conf_dir %>/grafana.ini
+PID_FILE_DIR=<%= @pid_dir %>
 RESTART_ON_UPGRADE=false
