--- a/templates/default/grafana-env.erb
+++ b/templates/default/grafana-env.erb
@@ -12,3 +12,4 @@ MAX_OPEN_FILES=10000
 CONF_DIR=<%= @conf_dir %>
 CONF_FILE=<%= @conf_dir %>/grafana.ini
 RESTART_ON_UPGRADE=false
+PID_FILE_DIR=<%= @pid_dir %>
