--- a/templates/grafana-env.erb
+++ b/templates/grafana-env.erb
@@ -9,3 +9,4 @@ CONF_DIR=<%= @conf_dir %>
 CONF_FILE=<%= @conf_dir %>/grafana.ini
 PID_FILE_DIR=<%= @pid_dir %>
 RESTART_ON_UPGRADE=<%= @restart_on_upgrade %>
+LOG_DIR=/var/log/grafana
