--- a/templates/grafana.ini.erb
+++ b/templates/grafana.ini.erb
@@ -752,12 +752,12 @@ templates_pattern = <%= @grafana['emails']['templates_pattern'] %>
 # Either "console", "file", "syslog". Default is console and file
 # Use space to separate multiple modes, e.g. "console file"
 <% if @grafana['log']['mode'] %>
-templates_pattern = <%= @grafana['log']['mode'] %>
+mode = <%= @grafana['log']['mode'] %>
 <% end %>
 
 # Either "debug", "info", "warn", "error", "critical", default is "info"
 <% if @grafana['log']['level'] %>
-templates_pattern = <%= @grafana['log']['level'] %>
+level = <%= @grafana['log']['level'] %>
 <% end %>
 
 # optional settings to set different levels for specific loggers. Ex filters = sqlstore:debug
