Add role_attribute_path configuration for generic OAuth
- In Grafana 6.5+ the [role_attribute_path](https://grafana.com/docs/grafana/latest/auth/generic-oauth/\#role-mapping) is used to map user information to roles. Add this as an attribute to grafana.ini

--- a/templates/grafana.ini.erb
+++ b/templates/grafana.ini.erb
@@ -660,6 +660,9 @@ tls_client_ca = <%= @grafana['auth_generic_oauth']['tls_client_ca'] %>
 <% if @grafana['auth_generic_oauth']['send_client_credentials_via_post'] %>
 send_client_credentials_via_post = <%= @grafana['auth_generic_oauth']['send_client_credentials_via_post'] %>
 <% end %>
+<% if @grafana['auth_generic_oauth']['role_attribute_path'] %>
+role_attribute_path = <%= @grafana['auth_generic_oauth']['role_attribute_path'] %>
+<% end %>
 <% end %>
 #################################### Basic Auth ##########################
 <% if @grafana['auth_basic'] %>
