--- a/templates/ldap.toml.erb
+++ b/templates/ldap.toml.erb
@@ -89,10 +89,15 @@ email = "<%= @ldap['servers_attributes_email'] %>"
 <% @ldap['group_mappings'].each do | group | %>
 
 [[servers.group_mappings]]
-<% group.each do |k, v| %>
-<% next if v.nil? %>
-<%= k.to_s %> = "<%= v.to_s %>"
-<% end %>
-
+group_dn = "<%= group['group_dn'] %>"
+<% unless group['org_role'].nil? -%>
+org_role = "<%= group['org_role'] %>"
+<% end -%>
+<% unless group['org_id'].nil? -%>
+org_id = <%= group['org_id'] %>
+<% end -%>
+<% unless group['grafana_admin'].nil? -%>
+grafana_admin = <%= group['grafana_admin'] %>
+<% end -%>
 <% end # group_mappings loop -%>
 <% end # group_mappings unless -%>
