--- a/templates/grafana.ini.erb
+++ b/templates/grafana.ini.erb
@@ -715,6 +715,40 @@ config_file = <%= @grafana['auth_ldap']['config_file'] %>
 allow_sign_up = <%= @grafana['auth_ldap']['allow_sign_up'] %>
 <% end %>
 <% end %>
+#################################### Auth AzureAD #######################
+<% if @grafana['auth_azuread'] %>
+[auth.azuread]
+<% if @grafana['auth_azuread']['name'] %>
+name = <%= @grafana['auth_azuread']['name'] %>
+<% end %>
+<% if @grafana['auth_azuread']['enabled'] %>
+enabled = <%= @grafana['auth_azuread']['enabled'] %>
+<% end %>
+<% if @grafana['auth_azuread']['allow_sign_up'] %>
+allow_sign_up = <%= @grafana['auth_azuread']['allow_sign_up'] %>
+<% end %>
+<% if @grafana['auth_azuread']['client_id'] %>
+client_id = <%= @grafana['auth_azuread']['client_id'] %>
+<% end %>
+<% if @grafana['auth_azuread']['client_secret'] %>
+client_secret = <%= @grafana['auth_azuread']['client_secret'] %>
+<% end %>
+<% if @grafana['auth_azuread']['scopes'] %>
+scopes = <%= @grafana['auth_azuread']['scopes'] %>
+<% end %>
+<% if @grafana['auth_azuread']['auth_url'] %>
+auth_url = <%= @grafana['auth_azuread']['auth_url'] %>
+<% end %>
+<% if @grafana['auth_azuread']['token_url'] %>
+token_url = <%= @grafana['auth_azuread']['token_url'] %>
+<% end %>
+<% if @grafana['auth_azuread']['allowed_domains'] %>
+allowed_domains = <%= @grafana['auth_azuread']['allowed_domains'] %>
+<% end %>
+<% if @grafana['auth_azuread']['allowed_groups'] %>
+allowed_groups = <%= @grafana['auth_azuread']['allowed_groups'] %>
+<% end %>
+<% end %>
 #################################### SMTP / Emailing #####################
 <% if @grafana['smtp'] %>
 [smtp]
