--- a/templates/grafana.ini.erb
+++ b/templates/grafana.ini.erb
@@ -354,6 +354,9 @@ secret_key = <%= @grafana['external_image_storage']['secret_key'] %>
 <% if @grafana['dashboards']['versions_to_keep'] %>
 versions_to_keep = <%= @grafana['dashboards']['versions_to_keep'] %>
 <% end %>
+<% if @grafana['dashboards']['min_refresh_interval'] %>
+min_refresh_interval = <%= @grafana['dashboards']['min_refresh_interval'] %>
+<% end %>
 <% end %>
 #################################### Users ###############################
 <% if @grafana['users'] %>
