--- a/templates/grafana.ini.erb
+++ b/templates/grafana.ini.erb
@@ -354,6 +354,12 @@ secret_key = <%= @grafana['external_image_storage']['secret_key'] %>
 <% if @grafana['dashboards']['versions_to_keep'] %>
 versions_to_keep = <%= @grafana['dashboards']['versions_to_keep'] %>
 <% end %>
+
+# Minimum dashboard refresh interval. When set, this will restrict users to set the refresh interval of a dashboard lower than given interval. Per default this is 5 seconds.
+# The interval string is a possibly signed sequence of decimal numbers, followed by a unit suffix (ms, s, m, h, d), e.g. 30s or 1m.
+<% if @grafana['dashboards']['min_refresh_interval'] %>
+min_refresh_interval = <%= @grafana['dashboards']['min_refresh_interval'] %>
+<% end %>
 <% end %>
 #################################### Users ###############################
 <% if @grafana['users'] %>
