--- a/templates/grafana.ini.erb
+++ b/templates/grafana.ini.erb
@@ -756,7 +756,52 @@ allowed_domains = <%= @grafana['auth_azuread']['allowed_domains'] %>
 <% if @grafana['auth_azuread']['allowed_groups'] %>
 allowed_groups = <%= @grafana['auth_azuread']['allowed_groups'] %>
 <% end %>
+<% end %>1
+
+#################################### Okta Auth #######################
+<% if @grafana['auth_okta'] %>
+[auth.okta]
+<% if @grafana['auth_okta']['name'] %>
+name = <%= @grafana['auth_okta']['name'] %>
 <% end %>
+<% if @grafana['auth_okta']['enabled'] %>
+enabled = <%= @grafana['auth_okta']['enabled'] %>
+<% end %>
+<% if @grafana['auth_okta']['allow_sign_up'] %>
+allow_sign_up = <%= @grafana['auth_okta']['allow_sign_up'] %>
+<% end %>
+<% if @grafana['auth_okta']['client_id'] %>
+client_id = <%= @grafana['auth_okta']['client_id'] %>
+<% end %>
+<% if @grafana['auth_okta']['client_secret'] %>
+client_secret = <%= @grafana['auth_okta']['client_secret'] %>
+<% end %>
+<% if @grafana['auth_okta']['scopes'] %>
+scopes = <%= @grafana['auth_okta']['scopes'] %>
+<% end %>
+<% if @grafana['auth_okta']['auth_url'] %>
+auth_url = <%= @grafana['auth_okta']['auth_url'] %>
+<% end %>
+<% if @grafana['auth_okta']['auth_url'] %>
+auth_url = <%= @grafana['auth_okta']['auth_url'] %>
+<% end %>
+<% if @grafana['auth_okta']['token_url'] %>
+token_url = <%= @grafana['auth_okta']['token_url'] %>
+<% end %>
+<% if @grafana['auth_okta']['api_url'] %>
+api_url = <%= @grafana['auth_okta']['api_url'] %>
+<% end %>
+<% if @grafana['auth_okta']['allowed_domains'] %>
+allowed_domains = <%= @grafana['auth_okta']['allowed_domains'] %>
+<% end %>
+<% if @grafana['auth_okta']['allowed_groups'] %>
+allowed_groups = <%= @grafana['auth_okta']['allowed_groups'] %>
+<% end %>
+<% if @grafana['auth_okta']['role_attribute_path'] %>
+role_attribute_path = <%= @grafana['auth_okta']['role_attribute_path'] %>
+<% end %>
+<% end %>
+
 #################################### SMTP / Emailing #####################
 <% if @grafana['smtp'] %>
 [smtp]
