--- a/templates/grafana.ini.erb
+++ b/templates/grafana.ini.erb
@@ -756,7 +756,7 @@ allowed_domains = <%= @grafana['auth_azuread']['allowed_domains'] %>
 <% if @grafana['auth_azuread']['allowed_groups'] %>
 allowed_groups = <%= @grafana['auth_azuread']['allowed_groups'] %>
 <% end %>
-<% end %>1
+<% end %>
 
 #################################### Okta Auth #######################
 <% if @grafana['auth_okta'] %>
