Revert "Merge remote-tracking branch 'upstream/master' into main"
This reverts commit 372a3b3bad449fe9463c49924e1ee45fc2fc49eb, reversing
changes made to 5e41137d555080183147503936ee21c09adfb075.

--- a/templates/grafana-env.erb
+++ b/templates/grafana-env.erb
@@ -7,4 +7,6 @@ GRAFANA_GROUP=<%= @grafana_group %>
 GRAFANA_HOME=<%= @grafana_home %>
 CONF_DIR=<%= @conf_dir %>
 CONF_FILE=<%= @conf_dir %>/grafana.ini
+PID_FILE_DIR=<%= @pid_dir %>
 RESTART_ON_UPGRADE=<%= @restart_on_upgrade %>
+LOG_DIR=/var/log/grafana
