--- a/templates/grafana.ini.erb
+++ b/templates/grafana.ini.erb
@@ -350,6 +350,44 @@ access_key = <%= @grafana['external_image_storage']['access_key'] %>
 secret_key = <%= @grafana['external_image_storage']['secret_key'] %>
 <% end %>
 <% end %>
+
+#################################### Dashboards ##################
+<% if @grafana['plugins'] %>
+[plugins]
+<% if @grafana['plugins']['enable_alpha'] %>
+# Set to true if you want to test alpha plugins that are not yet ready for general usage. Default is false.
+enable_alpha = <%= @grafana['plugins']['enable_alpha'] %>
+<% end %>
+
+<% if @grafana['plugins']['allow_loading_unsigned_plugins'] %>
+# Enter a comma-separated list of plugin identifiers to identify plugins to load even if they are unsigned.
+# Plugins with modified signatures are never loaded.
+# We do not recommend using this option.
+allow_loading_unsigned_plugins = <%= @grafana['plugins']['allow_loading_unsigned_plugins'] %>
+<% end %>
+
+<% if @grafana['plugins']['plugin_admin_enabled'] %>
+# Available to Grafana administrators only, enables installing / uninstalling / updating plugins directly from the Grafana UI.
+# Set to true by default. Setting it to false will hide the install / uninstall / update controls.
+plugin_admin_enabled = <%= @grafana['plugins']['plugin_admin_enabled'] %>
+<% end %>
+
+<% if @grafana['plugins']['plugin_admin_external_manage_enabled'] %>
+# Set to true if you want to enable external management of plugins. Default is false. This is only applicable to Grafana Cloud users.
+plugin_admin_external_manage_enabled = <%= @grafana['plugins']['plugin_admin_external_manage_enabled'] %>
+<% end %>
+
+<% if @grafana['plugins']['plugin_catalog_url'] %>
+# Custom install/learn more URL for enterprise plugins. Defaults to https://grafana.com/grafana/plugins/.
+plugin_catalog_url = <%= @grafana['plugins']['plugin_catalog_url'] %>
+<% end %>
+
+<% if @grafana['plugins']['plugin_catalog_hidden_plugins'] %>
+# Enter a comma-separated list of plugin identifiers to hide in the plugin catalog.
+plugin_catalog_hidden_plugins = <%= @grafana['plugins']['plugin_catalog_hidden_plugins'] %>
+<% end %>
+<% end %>
+
 #################################### Dashboards ##################
 <% if @grafana['dashboards'] %>
 [dashboards]
@@ -989,7 +1027,98 @@ nodata_or_nullvalues = <%= @grafana['alerting']['nodata_or_nullvalues'] %>
 <% if @grafana['alerting']['concurrent_render_limit'] %>
 concurrent_render_limit = <%= @grafana['alerting']['concurrent_render_limit'] %>
 <% end %>
+
+<% if @grafana['alerting']['max_annotation_age'] %>
+# Configures for how long alert annotations are stored. Default is 0, which keeps them forever.
+max_annotation_age = <%= @grafana['alerting']['max_annotation_age'] %>
 <% end %>
+
+<% if @grafana['alerting']['max_annotations_to_keep'] %>
+# Configures max number of alert annotations that Grafana stores. Default value is 0, which keeps all alert annotations.
+max_annotations_to_keep = <%= @grafana['alerting']['max_annotations_to_keep'] %>
+<% end %>
+<% end %>
+
+<% if @grafana['unified_alerting'] %>
+############################ Unified Alerting ############################
+[unified_alerting]
+<% if @grafana['unified_alerting']['enabled'] %>
+# Enable the Unified Alerting sub-system and interface.
+enabled = <%= @grafana['unified_alerting']['enabled'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['disabled_orgs'] %>
+disabled_orgs = <%= @grafana['unified_alerting']['disabled_orgs'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['admin_config_poll_interval'] %>
+# Specify the frequency of polling for admin config changes. The default value is 60s.
+admin_config_poll_interval = <%= @grafana['unified_alerting']['admin_config_poll_interval'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['alertmanager_config_poll_interval'] %>
+# Specify the frequency of polling for Alertmanager config changes. The default value is 60s.
+alertmanager_config_poll_interval = <%= @grafana['unified_alerting']['alertmanager_config_poll_interval'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['ha_listen_address'] %>
+# Listen IP address and port to receive unified alerting messages for other Grafana instances.
+# The port is used for both TCP and UDP. It is assumed other Grafana instances are also running on the same port.
+# The default value is 0.0.0.0:9094.
+ha_listen_address = <%= @grafana['unified_alerting']['ha_listen_address'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['ha_advertise_address'] %>
+# Explicit IP address and port to advertise other Grafana instances. The port is used for both TCP and UDP.
+ha_advertise_address = <%= @grafana['unified_alerting']['ha_advertise_address'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['ha_peers'] %>
+# Comma-separated list of initial instances (in a format of host:port) that will form the HA cluster.
+# Configuring this setting will enable High Availability mode for alerting.
+ha_peers = <%= @grafana['unified_alerting']['ha_peers'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['ha_peer_timeout'] %>
+# Time to wait for an instance to send a notification via the Alertmanager.
+ha_peer_timeout = <%= @grafana['unified_alerting']['ha_peer_timeout'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['ha_gossip_interval'] %>
+# The interval between sending gossip messages. The default value is 200ms.
+ha_gossip_interval = <%= @grafana['unified_alerting']['ha_gossip_interval'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['ha_push_pull_interval'] %>
+# The interval between gossip full state syncs. The default value is 60s.
+ha_push_pull_interval = <%= @grafana['unified_alerting']['ha_push_pull_interval'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['execute_alerts'] %>
+# Enable or disable alerting rule execution. The default value is true.
+# This option has a legacy version in the alerting section that takes precedence.
+execute_alerts = <%= @grafana['unified_alerting']['execute_alerts'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['evaluation_timeout'] %>
+# Sets the alert evaluation timeout when fetching data from the datasource. The default value is 30s
+# This option has a legacy version in the [alerting] section that takes precedence.
+evaluation_timeout = <%= @grafana['unified_alerting']['evaluation_timeout'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['max_attempts'] %>
+# Sets a maximum number of times we’ll attempt to evaluate an alert rule before giving up on that evaluation.
+# The default value is 3. This option has a legacy version in the alerting section that takes precedence.
+max_attempts = <%= @grafana['unified_alerting']['max_attempts'] %>
+<% end %>
+
+<% if @grafana['unified_alerting']['min_interval'] %>
+# Sets the minimum interval to enforce between rule evaluations. The default value is 10s which equals the scheduler interval
+# This option has a legacy version in the alerting section that takes precedence.
+min_interval = <%= @grafana['unified_alerting']['min_interval'] %>
+<% end %>
+<% end %>
+
 #################################### Rendering ###########################
 <% if @grafana['rendering'] %>
 [rendering]
